plugins {
    alias(libs.plugins.javafx) apply false
    alias(libs.plugins.jlink) apply false
}

allprojects {
    group = 'org.masjidku'
    version = '1.0'

    apply plugin: 'java'
    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    repositories {
        mavenCentral()
    }
}
